data/collection/fixes/descriptions/scala/scala-5029
I don't think the following code should produce a compiler error:

```scala
scala> (Vector(): Seq[_]) match { case List() => true; case Nil => false }}}
<console>:8: error: unreachable code
              (Vector(): Seq[_]) match { case List() => true; case Nil => false }
                                                                          ^
```

The following slightly modified version seems to show that the `false` can be reached:

```scala
scala> (Vector(): Seq[_]) match { case List() => true; case x if x == Nil => false }
warning: there were 1 unchecked warnings; re-run with -unchecked for details
res1: Boolean = false
```

See also [this Stack Overflow question](http://stackoverflow.com/q/7549111/334519).